--- a/package.json
+++ b/package.json
@@ -1,26 +1,33 @@
 {
-  "name": "base",
+  "name": "delivery-much",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "cross-env NODE_PATH=. NODE_ENV=development nodemon"
+    "dev": "cross-env NODE_PATH=. NODE_ENV=development nodemon",
+    "test:unit": "cross-env NODE_PATH=. NODE_ENV=development mocha --config tests/.mocha.unit.json --reporter mocha-multi-reporters --exit"
   },
-  "author": "",
+  "author": "Rodrigo Mello Da Rosa",
   "license": "ISC",
   "dependencies": {
-    "amqplib": "^0.8.0",
+    "amqplib": "0.8.0",
     "awilix": "4.2.1",
     "awilix-express": "2.1.1",
     "body-parser": "1.18.3",
+    "chai": "4.3.4",
+    "chai-change": "2.1.2",
+    "chai-spies": "1.0.0",
     "chalk": "2.4.2",
     "compression": "1.7.4",
     "cors": "2.8.5",
     "cross-env": "7.0.3",
+    "dirty-chai": "2.0.1",
     "dotenv": "7.0.0",
     "express": "4.17.1",
     "http-status": "1.3.2",
     "method-override": "3.0.0",
+    "mocha": "9.0.3",
+    "mocha-multi-reporters": "^1.5.1",
     "mongoose": "5.13.4",
     "nodemon": "2.0.7"
   }
