--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,12 @@
 version: "3.8"
 services:
+  mongo-seed:
+    build: ./mongo-seed
+    restart: on-failure
+    networks:
+      - app-network
+    links: 
+      - db
   db:
     image: mongo
     restart: always
