Created handler to increment and decrement products quantity :white_check_mark:

--- a/.nycrc
+++ b/.nycrc
@@ -1,12 +1,16 @@
 {
   "cwd": "./src",
+  "report-dir": "coverage",
   "exclude": [
     "container.js",
     "app.js"
   ],
   "reporter": [
+	"cobertura",
     "html",
     "lcov",
     "text-summary"
-  ]
+  ],
+  "check-coverage": true,
+  "lines": 98
 }
