--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "cross-env NODE_PATH=. NODE_ENV=development nodemon",
-    "test:unit": "cross-env NODE_PATH=. NODE_ENV=development mocha --config tests/.mocha.unit.json --reporter mocha-multi-reporters --exit"
+    "test:unit": "cross-env NODE_PATH=. NODE_ENV=development mocha --config tests/.mocha.unit.json --reporter mocha-multi-reporters --exit",
+    "coverage": "cross-env NODE_PATH=. NODE_ENV=development nyc mocha --config tests/.mocha.unit.json --reporter mocha-multi-reporters --exit"
   },
   "author": "Rodrigo Mello Da Rosa",
   "license": "ISC",
@@ -27,8 +28,9 @@
     "http-status": "1.3.2",
     "method-override": "3.0.0",
     "mocha": "9.0.3",
-    "mocha-multi-reporters": "^1.5.1",
+    "mocha-multi-reporters": "1.5.1",
     "mongoose": "5.13.4",
-    "nodemon": "2.0.7"
+    "nodemon": "2.0.7",
+    "nyc": "15.1.0"
   }
 }
