--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dotenv": "7.0.0",
     "express": "4.17.1",
     "http-status": "1.3.2",
+    "joi": "17.4.1",
     "method-override": "3.0.0",
     "mocha": "9.0.3",
     "mocha-multi-reporters": "1.5.1",
